tests/fixtures/compile-errors/no-type-parameters/input.ts
import createValidator from "../../../../dist/typecheck.macro";
createValidator();
